# sae-causal-audit

./: .gitignore  CITATION.cff  Dockerfile  INTEGRATION.md  Makefile  README.md  expected_hashes.json  expected_results.json  pyproject.toml
.github/workflows/: ci.yml
concepts/: concepts_paper_v5_final.json  gpt2_demo_concepts.json
results/: real_audit_FINAL.json
results_local_backup/: audit_bad_k13.json  audit_bad_k13.md  audit_good_k4.json  audit_good_k4.md  summary.json
scripts/: audit_real_sae.py  generate_figures.py  reproduce_toy_results.py  requirements-real.txt  verify_result_hashes.py  verify_results_tolerance.py
src/sae_causal_audit/: __init__.py  audit.py  interfaces.py  matching.py  metrics.py  report.py  stats.py  toy.py
tests/: test_audit_integration.py  test_matching.py  test_metrics.py  test_stats.py
