[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sae-causal-audit"
version = "0.1.0"
description = "Causal validation (fired-fraction, ablation specificity, sign-correct steering) for sparse-autoencoder features — separating recovered features from causally inert ones."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohamed Abdessalem Bal" }]
keywords = ["interpretability", "sparse-autoencoders", "mechanistic-interpretability", "causal-validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.4", "mypy>=1.10"]
real = []  # sae-lens + transformer-lens pinned in scripts/requirements-real.txt

[project.urls]
Repository = "https://github.com/mohamed-bal/sae-causal-audit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sae_causal_audit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
